# spaces-wallet

./: Cargo.toml  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
assets/: icons.rs
src/: app.rs  branding.rs  client.rs  config.rs  constants.rs  helpers.rs  main.rs  state.rs  types.rs  util.rs
src/pages/main/: home.rs  mod.rs  receive.rs  spaces.rs  state.rs
src/pages/setup/: mod.rs
src/screen/: home.rs  market.rs  mod.rs  receive.rs  send.rs  settings.rs  sign.rs  spaces.rs
src/widget/: block.rs  form.rs  icon.rs  mod.rs  tabs.rs  text.rs
ui/: index.slint  types.slint  validators.slint
ui/components/: input.slint  nav_item.slint  qr_code.slint  side_nav.slint
ui/pages/: home.slint  receive.slint  send.slint  space.slint  spaces.slint
