[package]
name = "spaces-wallet"
version = "0.0.1"
edition = "2024"

[lints.clippy]
large_enum_variant = "allow"

[dependencies]
spaces_client = { git = "https://github.com/Ximik/spaces.git" }
spaces_protocol = { git = "https://github.com/Ximik/spaces.git" }
spaces_wallet = { git = "https://github.com/Ximik/spaces.git" }

tokio = { version = "1", default-features = false, features = ["fs"] }
iced = { version = "0.13.1", default-features = false, features = [
    "wgpu",
    "tiny-skia",
    "tokio",
    "qr_code",
    "advanced",
] }
jsonrpsee = { version = "0.22.5", features = ["http-client"] }
clap = { version = "4.5.6", features = ["derive", "env"] }
hex = "0.4.3"
rustc-hash = "1.1"
rfd = { version = "0.14", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
